添加predicate系列api的注释和单测